<resources>
    <string name="app_name">Assignment-3-Week-3</string>
    <string name="water_resource_name">Water Resource Name</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="water_resource_name_field_is_empty">Water Resource Name Field is Empty</string>
    <string name="location_field_is_empty">Location Field is Empty</string>
    <string name="type_field_is_empty">Type Field is Empty</string>
    <string name="sign_in_to">Sign in to</string>
    <string name="zappos_com">Zappos.com</string>
    <string name="using_your_amazon">using your Amazon</string>
    <string name="account">account</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email (phone for mobile accounts)</string>
    <string name="password">Amazon Password</string>
    <string name="show_password">Show Password</string>
    <string name="keep_me_signed_in_details">Keep me signed in. Details</string>
    <string name="new_to_amazon">New to Amazon?</string>
    <string name="conditions_of_use_privacy_notice">Conditions of Use Privacy Notice</string>
    <string name="_1996_2017_amazon_com_inc_or_its_affilates">© 1996-2017, Amazon.com Inc. Or its affilates</string>
    <string name="create_an_amazon_account">Create an Amazon account</string>
</resources>