<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grey">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/amazon"
                android:scaleType="centerCrop"
                android:padding="100dp"
                android:layout_gravity="start"/>
        </androidx.appcompat.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/darker_grey" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zappos_com"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/using_your_amazon"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/account">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/sign_in"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/blue"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:background="@drawable/border_background">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:background="@drawable/password_field"
                android:inputType="textEmailAddress"
                android:padding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:layout_height="60dp"
                android:background="@drawable/password_field"
                android:inputType="textPassword"
                android:padding="8dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/show_password">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/keep_me_signed_in_details">
            </TextView>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border_background_signin"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:text="@string/sign_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/darker_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_amazon"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#000000" />

            <View
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/darker_grey" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_background_create_account"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/create_an_amazon_account"/>
        <View
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:text="@string/conditions_of_use_privacy_notice"
            />

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_1996_2017_amazon_com_inc_or_its_affilates"
            android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>