<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/waterResourceNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/water_resource_name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/location"
        app:layout_constraintTop_toBottomOf="@+id/waterResourceNameEditText" />

    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/type"
        app:layout_constraintTop_toBottomOf="@+id/locationEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeEditText" />

    <TableLayout
        android:id="@+id/resultTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/addButton">

        <TableRow
            android:id="@+id/tableRowData"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>